--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta property="og:site_name" content="Wayne Ngan"/>
 <meta property="og:title" content="Wayne Ngan"/>
 <meta property="og:description" content="A personal page about who I am"/>
-<meta property="og:url" content="http://www.astro.utoronto.ca/~ngan/"/>
-<meta property="og:image" content="http://www.astro.utoronto.ca/~ngan/me_Geneva_fbpreview.jpg"/>
+<meta property="og:url" content="http://waynengan.info"/>
+<meta property="og:image" content="http://waynengan.info/me_Geneva_fbpreview.jpg"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" />
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans|Oswald|Roboto+Condensed" />
