fixed some extra and missing tags

--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,6 @@
             </ul>
         </div>
         
-        </ul>
     </div>
 </nav>
 
@@ -448,6 +447,9 @@
     </div>
     
 -->
+
+    </div>
+</div>
 
 </body>
 
