replaced email icon with github icon. also added contact section in the main page

--- a/resume.html
+++ b/resume.html
@@ -38,9 +38,9 @@
             <li><a href="research.html">Research</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="personal.html">Personal</a></li>
-            <li class="visible-xs"><a href="javascript:pomegranate();">Contact</a></li>
             <li><div class="mobile-menu-icons">
                 <a href="https://www.linkedin.com/in/waynengan">      <img src="icons_png/li_icon_big.png"/></a>
+                <a href="https://github.com/wayne927">                <img src="icons_png/gh_icon_big.png"/></a>
                 <a href="https://www.facebook.com/wayne.ngan.1">      <img src="icons_png/fb_icon_big.png"/></a>
                 <a href="https://www.instagram.com/wayne927/">        <img src="icons_png/ig_icon_big.png"/></a>
                 <a href="https://www.flickr.com/photos/34343876@N05/"><img src="icons_png/fl_icon_big.png"/></a>
@@ -50,8 +50,8 @@
             </ul>
             
             <ul class="nav navbar-nav navbar-right" id="desktop-menu-icons">
-                <li><a href="javascript:pomegranate();"><img src="icons_png/em_icon_big.png"/></a></li>
                 <li><a href="https://www.linkedin.com/in/waynengan">      <img src="icons_png/li_icon_big.png"/></a></li>
+                <li><a href="https://github.com/wayne927">                <img src="icons_png/gh_icon_big.png"/></a></li>
                 <li><a href="https://www.facebook.com/wayne.ngan.1">      <img src="icons_png/fb_icon_big.png"/></a></li>
                 <li><a href="https://www.instagram.com/wayne927/">        <img src="icons_png/ig_icon_big.png"/></a></li>
                 <li><a href="https://www.flickr.com/photos/34343876@N05/"><img src="icons_png/fl_icon_big.png"/></a></li>
