Updated about and resume pages to mention Teradata

--- a/resume.html
+++ b/resume.html
@@ -75,10 +75,15 @@
 
     <div class="panel panel-default">
         <div class="panel-heading">
-            <div class="panel-title"><a data-toggle="collapse" href="#collapse-skills">Programming Skills</a></div>
+            <div class="panel-title"><a data-toggle="collapse" href="#collapse-skills">Software Development Skills</a></div>
         </div>
         <div id="collapse-skills" class="panel-collapse collapse in">
             <div class="panel-body">
+                <div class="edu-box-left">Workflow</div>
+                <div class="edu-box-right">Agile Scrum, JIRA, Subversion, GitHub</div>
+
+                <div class="clearfix"></div>
+
                 <div class="edu-box-left">General</div>
                 <div class="edu-box-right">C/C++, Java, Python, Ruby, MPI, OpenMP, Csh, Bash</div>
 
@@ -102,6 +107,18 @@
         </div>
         <div id="collapse-technical" class="panel-collapse collapse in">
             <div class="panel-body">
+                <div class="edu-box-left">2016 - present</div>
+                <div class="edu-box-right"><h4>Database Software Developer (Teradata Unity)</h4>
+                    <ul>
+                        <li>Designed and implemented algorithms to handle synchronization between multple SQL databases</li>
+                        <li>Tested software functionalities against future regressions via automated verification tests</li>
+                        <li>Investigated customer issues and reported bugs where necessary</li>
+                        <li>Communicated ideas with product owners through design documents and daily stand-up meetings</li>
+                    </ul>
+                </div>
+
+                <div class="clearfix"></div>
+
                 <div class="edu-box-left">2009 - 2015</div>
                 <div class="edu-box-right"><h4>Graduate Student Researcher (U of Toronto)</h4>
                     <ul>
