--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!--<h1><span class="glyphicon glyphicon-user heading-icon"></span> About Wayne Ngan</h1>-->
     <h1><span class="heading-icon">?</span> About Wayne Ngan</h1>
 
-    <p>I am a computational scientist living in Toronto, Ontario. I grew up in Hong Kong and moved to Vancouver with my family when I was twelve. After finishing my undergraduate studies in the University of British Columbia, I moved to Toronto to pursue a PhD in computational astrophysics at the University of Toronto. I current work as a developer for a database software.</p>
+    <p>I am a computational scientist living in Toronto, Ontario. I grew up in Hong Kong and moved to Vancouver with my family when I was twelve. After finishing my undergraduate studies in the University of British Columbia, I moved to Toronto to pursue a PhD in computational astrophysics at the University of Toronto. I currently work as a developer for a database software.</p>
 
     <a href="resume.html" class="btn btn-primary">See my resume for details</a>
     
